# stair-step-detector

./: CALIBRATION.md  CMakeLists.txt  README.md  calculate-triangle.cpp  calibrate.cpp  calibration-triangle  calibrationMark.cpp  calibrationMark.h  calibrationTriangle.cpp  calibrationTriangle.h  camera.cpp  camera.h  configuration.h  detect-stairs.cpp  drawing.cpp  drawing.h  geometricCalibration.cpp  geometricCalibration.h  image.h  log.h  pointcloud.cpp  pointcloud.h  print-stairs.py  quadrilateralTest.cpp  quadrilateralTest.h  qvmTraits.h  segmentation.cpp  segmentation.h  stairs.cpp  stairs.h  transformation.cpp  transformation.h  types.h  window.cpp  window.h
model/: example.rossystem  stairs_msg.ros
model/rosnodes/: example_subscriber.ros  rviz.ros  stair_step_detector.ros  stairs_visualizer.ros
ros/example_subscriber_pkg/: package.xml  setup.cfg  setup.py
ros/example_subscriber_pkg/example_subscriber_pkg/: example_subscriber.py
ros/stair_step_detector_pkg/: package.xml  setup.cfg  setup.py
ros/stair_step_detector_pkg/stair_step_detector_pkg/: stair_step_detector.py
ros/stairs_msg/: CMakeLists.txt  package.xml
ros/stairs_msg/msg/: StairStep.msg  Stairs.msg
ros/stairs_visualizer_pkg/: package.xml  setup.cfg  setup.py
ros/stairs_visualizer_pkg/stairs_visualizer_pkg/: stairs_visualizer.py
