<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_subscriber_pkg</name>
  <version>0.0.1</version>
  <description>Example subscriber to stairs messages</description>
  <maintainer email="peter-nebe@users.noreply.github.com">peter</maintainer>
  <license>GNU General Public License v3.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>stairs_msg</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
